--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=booking-service
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-server.port=0
+spring.cloud.config.profile=dev
