--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,8 @@
 spring:
     application:
         name: booking-service
-    cloud:
-        config:
-            uri: http://localhost:8888
-            profile: dev
-    profiles:
-        active: dev
-
+server:
+    port: 0
 eureka:
     instance:
         instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
