Creating database init scripts and docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     networks:
       - application-network
     volumes:
+      - ./database/mysql-init:/docker-entrypoint-initdb.d
       - mysql_database_data:/data/db
     healthcheck:
         test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
