--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<version>2.8.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
